[gd_scene load_steps=2 format=3 uid="uid://victory_screen_ui"]

[ext_resource type="Script" path="res://scripts/ui/victory_screen.gd" id="1_script"]

[node name="VictoryScreen" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.02, 0.1, 0.8)

[node name="VictoryPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(450, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -190.0
offset_right = 225.0
offset_bottom = 190.0

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "VICTORY!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "The beast has been vanquished!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VictoryPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Rewards:
+ 100 Blood Coins
+ 1 Soul Essence"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VictoryPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VictoryPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
text = "CONTINUE"
